--- a/post.hbs
+++ b/post.hbs
@@ -34,7 +34,7 @@
                 <section class="author">
                     <h4>{{author.name}}</h4>
                     <p>{{author.bio}}</p>
-                    {{#if author.image}}<p><img src="{{author.image}}" alt="{{author.name}}" class="avatar avatar-100 photo" height="100" width="100" /></p>{{/if}}
+                    {{#if primary_author.profile_image}}<p><img src="{{primary_author.profile_image}}" alt="{{author.name}}" class="avatar avatar-100 photo" height="100" width="100" /></p>{{/if}}
                 </section>
             {{/if}}
 
